# HalfBakedEngine

./: .gitignore  CMakeLists.txt
include/: glad.h
shaders/: vertexShader.glsl
src/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  main.cpp  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h
src/shaders/: fragmentShader.glsl  vertexShader.glsl
